# SpartaSim

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  SpartaABC  setup.py
SpartaSRC/: ConversionUtils.cpp  DistTable.cpp  DistTable.h  FastZip.cpp  FastZip.h  MSA.cpp  MSA.h  RandomGenerators.cpp  RandomGenerators.h  SpartaABC_options.cpp  SpartaABC_options.h  distributionFactory.h  geometricDist.cpp  geometricDist.h  lavaletteDist.cpp  lengthDistribution.h  main.cpp  param_priors.cpp  param_priors.h  poissonDist.cpp  poissonDist.h  readTree.cpp  read_seqs.cpp  read_seqs.h  simulator.cpp  simulator.h  test.fasta  tree.cpp  tree.h  treeUtil.cpp  treeUtil.h  zipfDist.cpp  zipfDist.h
src/: SimTable.cpp  SimTable.h  SpartaABC.cpp  geometricDist.h  lavaletteDist.h  lengthDistribution.h  main.cpp  poissonDist.cpp  poissonDist.h  simulator.cpp  simulator.h  someUtil.cpp  someUtil.h  summ_stats_wrapper.cpp  summ_stats_wrapper.h  zipfDist.h
tests/: config_reader.py  sim_creator.py  test_basic.py
